--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "@vitest/coverage-c8": "^0.28.5",
+    "autoprefixer": "^10.4.13",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.28.5"
