--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "next": "^13.1.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.6",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
