--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "byaparis-marketplace",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/node": "18.14.0",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -31,7 +32,9 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vitest": "^0.28.5"
+    "vitest": "^0.28.5",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "@next/font": "13.1.6"
   }
 }
