--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/node": "18.14.0",
     "@types/jest": "^29.4.0",
+    "@types/node": "18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "@vitest/coverage-c8": "^0.28.5",
     "autoprefixer": "^10.4.13",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
-    "vitest": "^0.28.5",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
-    "@next/font": "13.1.6"
+    "vite": "^4.1.4",
+    "vitest": "^0.28.5"
   }
 }
