--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-on-netlify",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
@@ -31,6 +32,7 @@
     "eslint-config-next": "13.1.6",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "next-on-netlify": "^3.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
