--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "next": "^13.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.30.4",
@@ -34,8 +35,8 @@
     "jest-environment-jsdom": "^29.4.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.3",
     "vite": "^4.1.4",
-    "vitest": "^0.28.5",
-    "typescript": "^4.9.3"
+    "vitest": "^0.28.5"
   }
 }
