--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,5 +1,5 @@
 #Intsll dependencies only when needed
-FROM node:18-alpine AS deps
+FROM node:18.14.2-alpine3.17 AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
@@ -7,7 +7,7 @@ COPY package.json package*.json ./
 RUN yarn install --frozen-lockfile
 
 # Rebuild the source code only when needed
-FROM node:18-alpine AS builder
+FROM node:18.14.2-alpine3.17 AS builder
 
 # ARG GOOGLE_ANALYTICS_ID=""
 # ENV NEXT_PUBLIC_GA_ID=$GOOGLE_ANALYTICS_ID
@@ -21,7 +21,7 @@ COPY . .
 
 RUN yarn build
 
-FROM node:18-alpine AS runner
+FROM node:18.14.2-alpine3.17 AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
