--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.7.0",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +25,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
