--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.35.0",
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
@@ -26,6 +27,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/formidable": "^2.0.5",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
